<resources>
    <string name="app_name">Adult More</string>
    <string name="time_check_label">Time check</string>
    <string name="stretch_label">Stretch out</string>
    <string name="eat_label">Check your bite</string>
    <string name="culture_label">Develope a culture</string>
    <string name="punctual_time_label">Start</string>
    <string name="stretching_label">Stretching</string>
    <string name="other_label">other</string>
    <string name="error_dashboard">An error occured. Try again.</string>
    <string name="error_to_do_section">This section is still under construction</string>
    <string name="subtitle">Helps you get adultier!</string>


    <!--timecheck-->
    <string name="timecheck_title">Timecheck</string>
    <string name="timecheck_page_active_title">Current session</string>
    <string name="timecheck_page_stats_title">Statistics</string>

    <string name="label_remote_off">Remote work disabled</string>
    <string name="label_remote_on">Remote work enabled</string>
    <string name="label_excuse">Excuse yourself</string>
    <string name="label_excuse_added">Excuse added</string>
    <string name="time_at_work">Today you head up to work at: %s</string>
    <string name="reset_label">Reset today</string>
    <string name="label_your_excuse">Your excuse</string>

    <string name="read_excuse">Read excuse</string>
    <string name="excuse_accepted">Accept</string>
    <string name="excuse_rejected">Reject</string>
    <string name="late_label_mins">%d minutes late:(</string>
    <string name="late_label_hour">More than %.2f hour(s) late :(</string>
    <string name="late_label_no">Made it on time! Hooray:)</string>
    <string name="charge_label">+%.2f PLN</string>
    <string name="no_charge_label">No charge taken</string>
    <string name="timecheck_start_label">I am here!</string>
    <string name="wrong_destination_place_label">Are you sure that you work here?</string>

    <!-- timecheck/settings -->
    <string name="settings_title">Settings</string>

    <string name="charging_section_title">Set charging</string>
    <string name="timing_section_title">Set timing</string>
    <string name="initial_charge_label">Initial charge</string>
    <string name="step_charge_label">Step charge</string>
    <string name="max_charge_label">Max charge</string>
    <string name="start_time_label">Start time</string>
    <string name="minutes_late_label">Min minutes late</string>
    <string name="max_late_label">Max hours late</string>
    <string name="location_input_label">Type location</string>
    <string name="location_section_title">Location</string>
    <string name="enable_gps">Enable GPS function</string>
    <string name="title_activity_stretchout">StretchoutActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Stretching -->
    <string name="section_format">Stretching no: %1$d</string>
    <string name="stretchout_title">Stretch out!</string>

</resources>
