<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/layout_margin_small"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/section_bkg"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/layout_margin_small"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/charging_section_title"
            />

        <com.google.android.flexbox.FlexboxLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:alignContent="stretch" >

            <android.support.design.widget.TextInputLayout
                android:padding="@dimen/layout_margin_small"
                android:layout_width="@dimen/_100sdp"
                app:layout_flexGrow="1"
                android:id="@+id/init_til"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small" >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:id="@+id/init_tiet"
                    android:hint="@string/initial_charge_label"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:padding="@dimen/layout_margin_small"
                android:layout_width="@dimen/_100sdp"
                app:layout_flexGrow="1"
                android:id="@+id/step_til"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small" >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:id="@+id/step_tiet"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_charge_label"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:padding="@dimen/layout_margin_small"
                android:layout_width="@dimen/_100sdp"
                android:id="@+id/max_charge_til"
                app:layout_flexGrow="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small" >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:id="@+id/max_charge_tiet"
                    android:hint="@string/max_charge_label"/>
            </android.support.design.widget.TextInputLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>
    </LinearLayout>
