<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
<android.support.constraint.ConstraintLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/time_check_btn"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_20sdp"
        android:layout_marginRight="0.5dp"
        android:paddingLeft="3dp"
        android:layout_marginBottom="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stretch_out_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/eating_btn"
        android:background="@drawable/button_shape">

        <ImageView
            android:src="@drawable/timelapse_white"
            android:layout_width="@dimen/icon_size_large"
            android:padding="@dimen/_6sdp"
            android:tint="@color/accent"
            android:id="@+id/time_check_iv"
            android:layout_height="@dimen/icon_size_large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/time_check_tv"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_small"
            android:text="@string/time_check_label"
            android:padding="@dimen/_3sdp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/stretch_out_btn"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_20sdp"
        android:layout_marginBottom="0.5dp"
        android:layout_marginLeft="0.5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/time_check_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/culture_btn"
        android:background="@drawable/button_shape"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/icon_size_large"
            android:padding="@dimen/_6sdp"
            android:tint="@color/accent"
            android:src="@drawable/human_handsup_white"
            android:id="@+id/stretch_out_iv"
            android:layout_height="@dimen/icon_size_large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/stretch_out_tv"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_small"
            android:text="@string/stretch_label"
            android:padding="@dimen/_3sdp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/culture_btn"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0.5dp"
        android:layout_marginTop="0.5dp"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/eating_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_out_btn"
        android:background="@drawable/button_shape"
        android:gravity="center">

        <ImageView
            android:src="@drawable/brush_white"
            android:layout_width="@dimen/icon_size_large"
            android:padding="@dimen/_6sdp"
            android:tint="@color/accent"
            android:id="@+id/culture_iv"
            android:layout_height="@dimen/icon_size_large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:text="@string/culture_label"
            android:id="@+id/culture_tv"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_small"
            android:padding="@dimen/_3sdp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/eating_btn"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/culture_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_check_btn"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:layout_marginRight="0.5dp"
        android:layout_marginTop="0.5dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="@dimen/icon_size_large"
            android:padding="@dimen/_6sdp"
            android:tint="@color/accent"
            android:src="@drawable/food_variant_white"
            android:id="@+id/eating_iv"
            android:layout_height="@dimen/icon_size_large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/eat_label"
            android:id="@+id/eating_tv"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_small"
            android:padding="@dimen/_3sdp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>